[ADD] repository implementation with test cases of repository

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   connectivity_plus: ^3.0.2
   shared_preferences: ^2.0.15
   http: ^0.13.5
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
