--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,10 @@ dependencies:
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
   dartz: ^0.10.1
-  connectivity_plus: ^3.0.2
   shared_preferences: ^2.0.15
   http: ^0.13.5
   get: ^4.6.5
+  data_connection_checker_nulls: ^0.0.2
 
 dev_dependencies:
   flutter_test:
